--- a/index.html
+++ b/index.html
@@ -3,42 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sparsh NFC</title>
+  <title>Sparsh NFC Card</title>
   <link rel="stylesheet" href="styles.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-  <script defer src="script.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
-<body class="dark-mode">
-  <header class="navbar">
-    <img src="sparsh-logo.png" alt="Sparsh Logo" class="logo" />
-    <h1>Sparsh NFC</h1>
-    <button id="toggleMode">🌓</button>
-  </header>
+<body>
+  <div class="card-container">
+    <div class="banner">
+      <img src="1.png" alt="Profile" class="profile-img">
+    </div>
+    
+    <div class="card-content">
+      <h2 class="name">Utsav Singh</h2>
+      <p class="designation">Tech Enthusiast | Product Designer</p>
 
-  <main class="container">
-    <section class="profile">
-      <img src="profile.jpg" alt="Profile" class="profile-img" />
-      <h2>Utsav Patel</h2>
-      <p>Founder • NFC Tech</p>
-    </section>
+      <div class="contact-icons">
+        <a href="mailto:your@email.com"><i class="fas fa-envelope"></i></a>
+        <a href="tel:+919999999999"><i class="fas fa-phone"></i></a>
+        <a href="#"><i class="fas fa-map-marker-alt"></i></a>
+      </div>
 
-    <section class="contact-card">
-      <h3>📇 Digital Business Card</h3>
-      <ul>
-        <li>📞 +91-XXXXXXXXXX</li>
-        <li>✉️ utsav@sparshnfc.com</li>
-        <li>🌐 www.sparshnfc.com</li>
-        <li>📍 Surat, Gujarat</li>
-      </ul>
+      <button class="save-btn">Save Contact</button>
 
-      <a href="https://sparshnfc.com/profile/utsav" class="cta-button" target="_blank">✨ Tap or Scan</a>
-
-      <div id="qrcode" class="qr"></div>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Sparsh NFC. All rights reserved.</p>
-  </footer>
+      <div class="social-links">
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="WhatsApp"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Discord"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968804.png" alt="Telegram"></a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
