--- a/v3.html
+++ b/v3.html
@@ -159,13 +159,13 @@
 </head>
 <body>
   <div class="card">
-    <img src="1.png" alt="Profile Picture">
-    <div class="name">Sparsh Digital Business Card</div>
+    <img src="https://i.pravatar.cc/150?img=3" alt="Profile Picture">
+    <div class="name">Utsav Patel</div>
     <div class="title">Product Designer</div>
 
     <div class="buttons">
       <a href="mailto:email@example.com"><i class="fas fa-envelope"></i></a>
-      <a href="tel:+917990201438"><i class="fas fa-phone"></i></a>
+      <a href="tel:+919876543210"><i class="fas fa-phone"></i></a>
       <a href="#" onclick="showQR()"><i class="fas fa-qrcode"></i></a>
     </div>
 
@@ -183,9 +183,9 @@
     function downloadVCF() {
       const vcfData = `BEGIN:VCARD
 VERSION:3.0
-FN:Utsav Singh
-TEL:+917990201438
-EMAIL:rajputrituraj03@gmail.com
+FN:Utsav Patel
+TEL:+919876543210
+EMAIL:email@example.com
 ORG:Sparsh NFC
 TITLE:Product Designer
 END:VCARD`;
