--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div class="social-links">
         <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="WhatsApp"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
+        <a href="https://www.instagram.com/sparshnfc/"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
         <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Discord"></a>
         <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968804.png" alt="Telegram"></a>
       </div>
