--- a/index.html
+++ b/index.html
@@ -1,38 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sparsh NFC Card</title>
-  <link rel="stylesheet" href="styles.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Under Construction | Sparsh NFC</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #5e60ce, #7400b8);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .container {
+      animation: fadeIn 1.5s ease-in-out;
+      max-width: 600px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.1rem;
+      opacity: 0.9;
+      margin-bottom: 20px;
+    }
+
+    .loader {
+      width: 50px;
+      height: 50px;
+      border: 4px solid rgba(255, 255, 255, 0.3);
+      border-top: 4px solid white;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin: 20px auto;
+    }
+
+    footer {
+      font-size: 0.9rem;
+      opacity: 0.7;
+      margin-top: 20px;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div class="card-container">
-    <div class="banner">
-      <img src="1.png" alt="Profile" class="profile-img">
-    </div>
-    
-    <div class="card-content">
-      <h2 class="name">Utsav Singh</h2>
-      <p class="designation">Tech Enthusiast | Product Designer</p>
-
-      <div class="contact-icons">
-        <a href="mailto:your@email.com"><i class="fas fa-envelope"></i></a>
-        <a href="tel:+919999999999"><i class="fas fa-phone"></i></a>
-        <a href="#"><i class="fas fa-map-marker-alt"></i></a>
-      </div>
-
-      <button class="save-btn">Save Contact</button>
-
-      <div class="social-links">
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="WhatsApp"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Discord"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968804.png" alt="Telegram"></a>
-      </div>
-    </div>
+  <div class="container">
+    <h1>🚧 Under Construction 🚧</h1>
+    <p>We’re working hard to bring you something amazing. Stay tuned for the new Sparsh NFC experience!</p>
+    <div class="loader"></div>
+    <footer>© 2025 Sparsh NFC | All Rights Reserved</footer>
   </div>
 </body>
 </html>
